--- a/mailconfig.json
+++ b/mailconfig.json
@@ -1,19 +1,3 @@
 [
-  {"name": "Kindegarden", "id":"4f129f90-35a6-11f0-8b28-7dcf7b8676a6", "grades":[0]},
-  {"name": "First Grade", "id":"13444c3e-35a6-11f0-aa9e-91a8df9c2441", "grades":[1]},
-  {"name": "Second Grade", "id":"1aa765b0-35a6-11f0-82f2-c3286aeb9e0a", "grades":[2]},
-  {"name": "Third Grade", "id":"63a88366-35a6-11f0-9c19-7dcf7b8676a6", "grades":[3]},
-  {"name": "Fourth Grade", "id":"73602cb4-35a6-11f0-ad7b-91a8df9c2441", "grades":[4]},
-  {"name": "Fifth Grade", "id":"7de32d12-35a6-11f0-a1e4-7dcf7b8676a6", "grades":[5]},
-  {"name": "Sixth Grade", "id":"86c1bc28-35a6-11f0-86d0-91a8df9c2441", "grades":[6]},
-  {"name": "Seventh Grade", "id":"8b88a38e-35a6-11f0-b6eb-91a8df9c2441", "grades":[7]},
-  {"name": "Eigth Grade", "id":"8eca8468-35a6-11f0-995b-7dcf7b8676a6", "grades":[8]},
-  {"name": "Ninth Grade", "id":"937754d2-35a6-11f0-8895-7dcf7b8676a6", "grades":[9]},
-  {"name": "Tenth Grade", "id":"98750786-35a6-11f0-9cce-e98199546387", "grades":[10]},
-  {"name": "Eleventh Grade", "id":"9d681260-35a6-11f0-ba30-c3286aeb9e0a", "grades":[11]},
-  {"name": "Twelth Grade", "id":"a1ba033c-35a6-11f0-95ba-7dcf7b8676a6", "grades":[12]},
-
-  {"name": "Lower School", "id":"b9e598da-35ac-11f0-8b40-e98199546387", "grades":[0,1,2,3,4,5]},
-  {"name": "Middle School", "id":"bdc5da78-35ac-11f0-9fb6-91a8df9c2441", "grades":[6,7,8]},
-  {"name": "Upper School", "id":"c43c8cda-35ac-11f0-b7e7-91a8df9c2441", "grades":[12,11,10,9]}
+  {"name": "It Test", "id":"7dadb030-8fb5-11ee-9a34-59d0c2d4a70b", "grades":[12,11,10,9]}
 ]
